--- a/package.json
+++ b/package.json
@@ -15,5 +15,11 @@
   "bugs": {
     "url": "https://github.com/Byenna/Voedselbos-Vue/issues"
   },
-  "homepage": "https://github.com/Byenna/Voedselbos-Vue#readme"
+  "homepage": "https://github.com/Byenna/Voedselbos-Vue#readme",
+  "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.3",
+    "bootstrap-icons": "^1.7.2",
+    "vue": "^2.6.14"
+  }
 }
